--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,7 +15,7 @@ max-width:40em;
 color:rgb(10, 10, 10);
 }
 
-a {outline:none !important; font-weight:bold; text-decoration:underline;}
+a {outline:none !important; font-weight:normal; text-decoration:underline;}
 a:link {color:#51739a;}
 a:visited {color:#606;}
 a:hover {color:#606;}
