--- a/styles/print.css
+++ b/styles/print.css
@@ -11,6 +11,11 @@
 		-webkit-column-count: 2; 
 		-moz-column-count: 2;
 		column-count: 2;
+		display:block;
+	}
+	
+	#autoToc{
+		display: none;
 	}
 	
 	p {
