--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,10 +9,11 @@ font-family:sans-serif;
 font-size:110%;
 line-height:1.6;
 margin:0;
-padding:2em 2em 5em;
+padding:1em;
 margin:auto;
 max-width:40em;
 color:rgb(10, 10, 10);
+
 }
 
 #wrapper h1,h2,h3,h4, p, figure, img{
@@ -179,12 +180,6 @@ ul li{
   list-style-type: square;
 }
 
-/*
-ul li:before {
-    color: #7b7a7a;
-    content: "⁃ ";
-}
-*/
 
 dt {font-weight:bold;}
 code {font-family:courier, monospace;}
