--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,21 +1,29 @@
 /*
 based on:
 https://github.com/hypertexthero/typography/blob/master/style.css (Public Domain)
-*/
 
-#wrapper {
-color:#000;
+some inspiration from yahoo’s: http://purecss.io/, in particular:http://purecss.io/layouts/side-menu/
+*/
+body{width:100%}
+#layoutWrapper{
+	padding:0;
+	margin:0;
+	width:auto;
+}
+
+#main {
 font-family:sans-serif;
 font-size:110%;
-line-height:1.6;
+line-height:1.6em;
 margin:0;
 padding:1em;
 margin:auto;
+width:auto;
 max-width:40em;
-color:rgb(10, 10, 10);
+color:rgb(20, 20, 20);
 }
 
-#wrapper h1,h2,h3,h4, p, figure, img{
+#main h1,h2,h3,h4, p, figure, img{
 	max-width:100%;
 }
 
@@ -192,4 +200,14 @@ hr {height:0; color:#eee; border:1px solid #eee; margin:2em 0 1em;}
 .quiet {color:#999;}
 .pull-left {float:left; margin:0.5em 2em 1em 0;}
 .pull-right {float:right; margin:0.5em 0 1em 2em;}
+
+
+
+@media (max-width: 60em) { 
+	#layoutWrapper{
+		width:100%;
+	}
+
+
+}
 
