responsive: HTML (aka pandoc templates) now with wrapper to set state (menu active/inactive) via class attribute.

--- a/styles/autoToc.css
+++ b/styles/autoToc.css
@@ -13,34 +13,38 @@
 
 #layoutWrapper.menuactive{
 	position:relative;
-	padding-left:20em;
-	padding-left:20rem;
+	padding-left:18em;
+	padding-left:18rem;
 }
 
-#autoToc {
-	font-family:sans-serif;
-	color:black;
-	background:rgb(230,235,240);
-	top: 0px;
-	left: 0px;
+
+
+#layoutWrapper #autoToc{
+font-family:sans-serif;
+color:black;
+background:rgb(230,235,240);
+top: 0px;
+left: 0px;
+font-size:0.8rem;
+box-sizing: border-box;
+box-shadow: 3px 3px 2px hsla(0, 0%, 0%, 0.2);
+min-width:auto;
+height:auto;
+padding-bottom: 0px;
+overflow:hidden;
+bottom: auto;
+position:fixed;
+width: 18em;
+width: 18rem;
+}
+
+#layoutWrapper.menuactive #autoToc {
 	bottom:0;
 	height:100%;
-	position:fixed;
-	font-size:0.8rem;
-	box-sizing: border-box;
 	padding:0 0 2em 0;
-	box-shadow: 3px 3px 2px hsla(0, 0%, 0%, 0.2);
-	width: 20em;
-	width: 20rem;
-	min-width:auto;
-	overflow:hidden;
 }
 
-
-
-
-
-#autoToc a.toggle{
+#layoutWrapper #autoToc a.toggle{
 		border: medium none;
 		padding: 4px 10px;
 		background:rgba(0,0,0,0.15);
@@ -74,11 +78,7 @@ background:rgba(0,0,0,0.3);
 
 #autoToc ul{
 display:none;
-padding:0;
 }
-
-
-
 
 #layoutWrapper.menuactive #autoToc ul {
 	margin: 0;
