--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,7 +8,7 @@ body{width:100%}
 #layoutWrapper{
 	padding:0;
 	margin:0;
-	width:auto;
+	width:100%;
 }
 
 #main {
@@ -20,6 +20,7 @@ padding:1em;
 margin:auto;
 width:auto;
 max-width:40em;
+max-width:40rem;
 color:rgb(20, 20, 20);
 }
 
@@ -203,11 +204,9 @@ hr {height:0; color:#eee; border:1px solid #eee; margin:2em 0 1em;}
 
 
 
-@media (max-width: 60em) { 
+@media (min-width: 60rem) { 
 	#layoutWrapper{
-		width:100%;
+	    width:auto;
 	}
-
-
 }
 
