--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,7 +8,7 @@ body{width:100%}
 #layoutWrapper{
 	padding:0;
 	margin:0;
-	width:100%;
+	width:100%; /*important for responsive display,  breakpoint switches this for :auto*/
 }
 
 #main {
@@ -204,9 +204,9 @@ hr {height:0; color:#eee; border:1px solid #eee; margin:2em 0 1em;}
 
 
 
-@media (min-width: 60rem) { 
+@media (min-width: 60rem) {  /*calculated breakpoint: text width= 40rem + 2*1rem padding + 18rem menu width; */
 	#layoutWrapper{
-	    width:auto;
+	    width:auto; /*if viewport is wider than 60rem: auto, otherwise 100% (see above)*/
 	}
 }
 
