--- a/styles/styles.css
+++ b/styles/styles.css
@@ -49,6 +49,10 @@ h1 a:hover,h2 a:hover,h3 a:hover,h4 a:hover,h5 a:hover{
   text-decoration:underline;
 }
 
+h1,h2,h3,h4,h5,h6{
+	 line-height:1.35em;
+}
+
 h1.title{
   font-size: 400%;
   text-transform: uppercase;
@@ -59,7 +63,6 @@ h1.title{
 
 h1 {
   font-size:280%;
-  line-height:1.35;
   margin:2.5em 0 0.4em;
   font-weight: normal;
 }
@@ -120,7 +123,7 @@ h1+h2, h2+h3, h3+h4{
 p + ul, p + ol, p + dl {margin-bottom:1.5em;}
 
 blockquote, .example {
-  border-left:5px solid #eee;
+  border-left:2px solid #eee;
   padding-left:1.5em;
   margin:1em 0;
   color:#5a5a5a;
@@ -157,8 +160,7 @@ blockquote small, .example small {
   font-size: 80%;
   margin: 0px;
   width: 100%;
-  border-left:2px solid #AAA;
-  padding-left:0.25em;
+  padding-left:0em;
 }
 
 .gallery{
