--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,7 +16,7 @@ body{
   width:100%; /*important for responsive display,  breakpoint switches this for :auto*/
 }
 
-#main {
+#main, div.section.level1 { /*main for html, section.level1 for epub*/
   font-family:sans-serif;
   font-size:110%;
   line-height:1.6em;
@@ -28,6 +28,12 @@ body{
   max-width:40rem;
   color:rgb(20, 20, 20);
 }
+
+body>h1, body>h2, body>h3, body>p{/*epub titlepage*/
+	padding-left:20px;
+	padding-right:20px;
+}
+
 
 #main h1,h2,h3,h4, p, figure, img{
   max-width:100%;
