--- a/styles/autoToc.css
+++ b/styles/autoToc.css
@@ -43,6 +43,7 @@ width: 18rem;
 	padding:0 0 2em 0;
 }
 
+
 #layoutWrapper #autoToc a.toggle{
 		border: medium none;
 		padding: 4px 10px;
@@ -60,6 +61,7 @@ background:rgba(0,0,0,0.3);
 	text-decoration: none;
 }
 
+
 #layoutWrapper:not(.menuactive) #autoToc a.toggle:after{
 	content:"▾";
 	float:right;
@@ -75,11 +77,11 @@ background:rgba(0,0,0,0.3);
 }
 
 
-#autoToc ul{
+#autoToc>.toc-list{
 display:none;
 }
 
-#layoutWrapper.menuactive #autoToc ul {
+#layoutWrapper.menuactive #autoToc>.toc-list {
 	margin: 0;
 	padding: 0;
 	padding-top: 0.5em;
@@ -92,37 +94,46 @@ display:none;
 }
 
 #autoToc li {
-			padding: 5px 10px;
+	margin:0.5em 0 0.5em 0; 
 	}
 
-#autoToc .toc-h1 a  {
-			font-weight:bold;
+#autoToc ol{
+	list-style-type:none;
+	padding-left:0;
+}
 
-	}
 
 #autoToc a {
 			color:black;
 			text-decoration: none;
 			display: block;
+			padding-top: 0.3em;
+			padding-bottom: 0.3em;
+			padding-right: 0.2em;	
 	}
 
 #autoToc a:hover {
 			text-decoration:underline;
 	}
 
-	#autoToc .toc-h2 {
-			padding-left: 10px;
+
+	#autoToc .node-name--H1 {
+		padding-left: 5px;
+		font-weight:bold;
+	}
+	#autoToc .node-name--H2 {
+			padding-left: 15px;
 	}
 
-	#autoToc .toc-h3 {
+	#autoToc .node-name--H3 {
 			padding-left: 20px;
 	}
 
-	#autoToc .toc-active {
+	#autoToc .is-active-li>a{
 			background: rgb(57, 107, 165);
 	}
 
-	#autoToc .toc-active a{
+	#autoToc .is-active-li>a{
 			color: white;
 	}
 }
