--- a/styles/styles.css
+++ b/styles/styles.css
@@ -35,7 +35,7 @@ body{
   max-width:100%;
 }
 
-a {outline:none !important; font-weight:normal; text-decoration:underline;}
+a {font-weight:normal; text-decoration:underline;}
 a:link {color:#51739a;}
 a:visited {color:#606;}
 a:hover {color:#606;}
