--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,11 +5,15 @@ https://github.com/hypertexthero/typography/blob/master/style.css (Public Domain
 some inspiration from yahoo’s: http://purecss.io/, in particular:http://purecss.io/layouts/side-menu/
 */
 
+
+
 body{
   width:100%;
   margin:0;
   padding:0;
 }
+
+/*layout HTML*/
 
 #layoutWrapper{
   padding:0;
@@ -17,6 +21,8 @@ body{
   width:100%; /*important for responsive display,  breakpoint switches this for :auto*/
 }
 
+/*general */
+/*the normal main container for the content*/
 #main, section.level1, section.titlepage { /*main for html, section.level1 for epub*/
   font-family:sans-serif;
   font-size:110%;
@@ -65,7 +71,7 @@ h1 {
 }
 
 section:first-child h1:first-child{
-  margin-top:0.5em; /*if the h1 is at the top, then remove the spaceing*/
+  margin-top:0.5em; /*if the h1 is at the top, then remove the spaceing to top*/
 }
 
 h2 {
@@ -105,6 +111,7 @@ h6 {
   margin:1.5em 0 0.4em;
 }
 
+/*link on headline to make the headlines anchor appear in the addressbar*/
 a.link-to-self{
   font-size: 0.8em;
   margin-left: 1em;
@@ -138,7 +145,9 @@ h1+h2, h2+h3, h3+h4{
 }
 
 
-p + ul, p + ol, p + dl {margin-bottom:1.5em;}
+p + ul, p + ol, p + dl {
+  margin-bottom:1.5em;
+}
 
 blockquote{
   border-left:2px solid #eee;
