--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,4 @@
+spac
 /*
 based on:
 https://github.com/hypertexthero/typography/blob/master/style.css (Public Domain)
@@ -91,7 +92,6 @@ h3 {
 h4 {
   font-weight:normal;
   font-size:120%;
-  letter-spacing:0.1em;
   margin:1.5em 0 0.4em;
   color:#5f5e5e;
 }
