--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,3 @@
-spac
 /*
 based on:
 https://github.com/hypertexthero/typography/blob/master/style.css (Public Domain)
@@ -12,7 +11,6 @@ body{
   width:100%;
   margin:0;
   padding:0;
-  font-family:sans-serif;
 }
 
 /*layout HTML*/
@@ -67,7 +65,7 @@ h1.title{
 
 h1 {
   font-size:280%;
-  margin:2.5em 0 0.4em;
+  margin:2.5em 0 1em;
   font-weight: normal;
 }
 
@@ -154,7 +152,6 @@ blockquote{
   padding-left:1.5em;
   margin:1em 0;
   color:#5a5a5a;
-  font-family:serif;
 }
 
 blockquote small{
@@ -187,7 +184,6 @@ figure>figcaption {
   width: 100%;
   padding-left:0em;
   line-height: 1.45em;
-  font-family:sans-serif;
   font-style:normal
 }
 
@@ -230,7 +226,7 @@ hr {
   border-bottom: 1px solid rgb(207, 207, 207);
 }
 
-.footnotes hr{ /*soo footnotes are separated by a larger separator*/
+.footnotes hr{ /*so footnotes are separated by a larger separator*/
   width: 100%;
 }
 
